# gov-ai-agent

./: .copilot-loop.state.json  .dockerignore  .env.example  .gitignore  .gov-ai-history.json  AI_CODING_RULES.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  IMPROVEMENT_REPORT.md  MISSION.md  MULTI_AGENT_V2_GUIDE.md  MULTI_AGENT_V2_IMPLEMENTATION.md  PRD文件.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  api_server.py  bash.exe.stackdump  config.yaml  config.yaml.example  conftest.py  dl-test-content.txt  engineer-log.md  engineering-log.md  gov-ai-mockup-v1.html  meeting-in.json  meeting-v2-out.json  n8n_workflow.json  n8n_workflow_meeting.json  openapi_temp.json  output.md  program.md  pyproject.toml  req-out-pretty.txt  requirements-lock.txt  requirements.txt  results.log.dedup  results.log.stdout.dedup  run_all_tests.ps1  (+8 more)
.claude/: ralph-loop.local.md  settings.json
.spec/: plan.md  specification.md  tasks.md
benchmark/: mvp30_corpus.json
config/: engines.yaml
docs/: abstraction-cut-sop.md  acl-recalibrate-2026-04-25.md  acl-v3-rca-handoff.md  admin-rescue-template.md  api-auth.md  arch-split-sop.md  architecture.md  atomic-tmp-audit.md  auto-commit-host-action.md  auto-commit-runtime-seat.md  auto-commit-source.md  benchmark-baseline.md  benchmark.md  change-13-acceptance-audit.md  ci-secrets-setup.md  cli-module-audit.md  cli-output-audit.md  commit-plan.md  corpus-200-push-2026-04-25.md  coverage.md  disaster-recovery.md  e2e-report.md  embedding-validation.md  engineer-log-spec.md  fda-endpoint-probe.md  integration-ci-first-run.md  integration-nightly.md  integration-plan.md  integration-skip-audit.md  live-ingest-debug-cli.txt  live-ingest-debug.md  live-ingest-report.md  live-ingest-urls.md  llm-providers.md  loop4-closure-report.md  mohw-endpoint-probe.md  open-notebook-study.md  openspec-promotion-audit-202604.md  pytest-profile-v6.4.md  pytest-runtime-profile.md  (+8 more)
kb_data/: regulation_doc_type_mapping.yaml
meta_git_live/: COMMIT_EDITMSG  ORIG_HEAD  config  index
openspec/: config.yaml
scripts/: adapter_health.py  adapter_health_report.json  audit_local_binding.py  audit_synthetic_flag.py  benchmark_trend.py  build_benchmark_corpus.py  check_acl_state.py  check_auto_engineer_state.py  check_autoengineer_stall.py  check_fat_files.py  check_runtime.py  cli_ast_audit.py  commit_msg_lint.py  dedupe_results_log.py  eval_quality.py  eval_recall.py  (+23 more)
(+769 files in other folders)
